--- a/job/templates/job/admin_job_report.html
+++ b/job/templates/job/admin_job_report.html
@@ -1,6 +1,6 @@
 {% extends 'job/base.html' %}
 {% block content %}
-	{% if 'Customer' in request.session.dash %}
+	{% if 'Admin' in request.session.dash %}
 	{% load static %}
 	<!-- datatable -->
 	<link href="{% static 'job/js/datatables/jquery.dataTables.min.css' %}" rel="stylesheet" type="text/css" />
@@ -36,24 +36,28 @@
 				<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 					<thead>
 						<tr>
-								<th>Start Date</th>
-								<th>Transportation</th>
-								<th>Visit Charge</th>
-								<th>Total Cost</th>
-								<th>Response</th>
+								<th>Worker</th>
+								<th>Job Started</th>
+								<th>Description</th>
+                				<th>Report</th>
+                				<th>Estimate</th>
+                				<th>Submit</th>
 						</tr>
 					</thead>
 					<tbody>
-						{% for new_job in all_jobs %}
+					{% for job in all_jobs %}
+						{% if job.job_report is not null %}
 						<tr>
-							<td scope="row">{{ new_job.job_start_datetime }}</td>
-				      <td>{{ new_job.Estimate_id.trasportation_charge }}</td>
-							<td>{{ new_job.Estimate_id.visit_charge }}</td>
-							<td>{{ new_job.Estimate_id.total_cost }}</td>
-							<td><a href="{% url 'job:accept_job' new_job.id %}"><button value="{{ new_job.id }}">Accept</button></a></td>
-							<td><a href="{% url 'job:reject_job' new_job.id %}"><button value="{{ new_job.id }}">Reject</button></a></td>
+							<td scope="row">{{ job.worker_id }}</td>
+							<td scope="row">{{ job.job_start_datetime }}</td>
+							<td>{{ job.job_description }}</td>
+              <td>{{ job.job_report }}</td>
+              <td>
+              	<a href="{% url 'job:estimate' job.service_id.id %}"><button name="report" value="{{ job.id }}">Estimate</button></a></td>
+				<td><a href="{% url 'job:admin_report_submit' job.id %}"><button value="{{ job.id }}">submit</button></a></td>
 						</tr>
-						{% endfor %}
+						{% endif %}
+					{% endfor %}
 					</tbody>
 				</table>
 			</div>
@@ -64,6 +68,8 @@
 	<script src="{% static 'job/js/nicescroll/jquery.nicescroll.min.js' %}"></script>
 	<!-- icheck -->
 	<script src="{% static 'job/js/icheck/icheck.min.js' %}"></script>
+
+	<script src="{% static 'job/js/custom.js' %}"></script>
 
 	<!-- Datatables-->
   <script src="{% static 'job/js/datatables/jquery.dataTables.min.js' %}"></script>
