--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -76,7 +76,9 @@
               {% if 'Customer' in request.session.dash %}
               <li><a href="{% url 'job:index' %}"><i class="fa fa-home"></i> Dashboard </a></li>
               <li><a href="{% url 'job:services' %}"><i class="fa fa-edit"></i> Services{{args}} </a></li>
-              <li><a href="{% url 'job:approvel' %}"><i class="fa fa-edit"></i> Jobs </a></li>
+              <li><a href="{% url 'job:approvel' %}"><i class="fa fa-edit"></i> Job Approvel </a></li>
+              
+              <li><a href="{% url 'job:updated_job' %}"><i class="fa fa-edit"></i> Report Approvel </a></li>
               <li><a><i class="fa fa-edit"></i> Invoice </a></li>
               <li><a  href="{% url 'job:custquery' %}"><i class="fa fa-edit"></i> My Queries </a></li>
               <li><a  href="{% url 'job:query' %}"><i class="fa fa-edit"></i> Make a Query </a></li>
@@ -93,6 +95,7 @@
               <li><a href="{% url 'job:index' %}"><i class="fa fa-home"></i> Dashboard </a></li>
               <li><a href="{% url 'job:service' %}"><i class="fa fa-edit"></i> Services </a></li>
               <li><a href="{% url 'job:job' %}"><i class="fa fa-edit"></i> Jobs </a></li>
+              <li><a href="{% url 'job:admin_job_report' %}"><i class="fa fa-edit"></i> Job Reports </a></li>
               <li><a><i class="fa fa-edit"></i> Invoice </a></li>
               <li><a href="{% url 'job:queries' %}"><i class="fa fa-edit"></i> Response to Query</a></li>
               <li><a href="{% url 'job:customer' %}"><i class="fa fa-edit"></i> Customer </a></li>
@@ -203,7 +206,7 @@
     <div id="notif-group" class="tabbed_notifications"></div>
   </div>
 
-  <script src="{% static 'job/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'job/js/bootstrap.min.js' %}"></script>
 
   <!-- gauge js -->
   <script type="text/javascript" src="{% static 'job/js/gauge/gauge.min.js' %}"></script>
@@ -317,11 +320,6 @@
   <!-- pace -->
   <script src="{% static 'job/js/pace/pace.min.js' %}"></script>
   <script>
-
-    $(document).ready(function(){
-      $('#myTable').DataTable();
-    });
-
     $(function() {
       $('#world-map-gdp').vectorMap({
         map: 'world_mill_en',
@@ -482,5 +480,5 @@
 
 </html>
 {% else %}
-  {% url 'job:login' %}
-{% endif %}
+      <h2>You have no access to this page</h2>
+  {% endif %}
