--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -93,7 +93,7 @@
                 <li><a href="{% url 'job:index' %}"><i class="fa fa-home"></i> Dashboard </a></li>
                 <li><a href="{% url 'job:service' %}"><i class="fa fa-edit"></i> Services </a></li>
                 <li><a href="{% url 'job:job' %}"><i class="fa fa-edit"></i> Jobs </a></li>
-                <li><a><i class="fa fa-edit"></i> Invoice </a></li>
+                <li><a href="{% url 'job:invoice' %}"><i class="fa fa-edit"></i> Invoice </a></li>
                 <li><a href="{% url 'job:queries' %}"><i class="fa fa-edit"></i> Response to Query</a></li>
                 <li><a href="{% url 'job:customer' %}"><i class="fa fa-edit"></i> Customer </a></li>
                 <li><a href="{% url 'job:worker' %}"><i class="fa fa-edit"></i> Worker </a></li>
