--- a/job/templates/job/customer_query.html
+++ b/job/templates/job/customer_query.html
@@ -20,11 +20,8 @@
 	</div>
 
 	<div class="col-md-12 col-sm-12 col-xs-12">
+		<button type="button" class="btn btn-primary pull-right make_query" data-toggle="modal" data-target="#make_query">Make Query</button>
 		<div class="x_panel">
-			<!-- <div class="x_title">
-				<h2></h2>
-				<div class="clearfix"></div>
-			</div> -->
 			{% if messages %}
 				<ul class="messages">
 						{% for message in messages %}
@@ -46,13 +43,35 @@
 						<tr>
 							<td scope="row">{{ query.query_dateTime }}</td>
 							<td>{{ query.query_description }}</td>
-							<td>{{ query.query_response }}</td>
+							{% if query.query_response %}
+								<td>{{ query.query_response }}</td>
+							{% else %}
+								<td>pending</td>
+							{% endif %}
 						</tr>
 						{% endfor %}
 					</tbody>
 				</table>
 			</div>
 		</div>
+
+		<div class="modal fade" id="make_query" role="dialog">
+			<div class="modal-dialog">
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
+						<div class="x_panel">
+							<div id="content_result">
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 	<!-- bootstrap progress js -->
 	<script src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
@@ -78,7 +97,21 @@
   <script src="{% static 'job/js/datatables/dataTables.scroller.min.js' %}"></script>
   <script src="{% static 'job/js/pace/pace.min.js' %}"></script>
 
-	<script>
+	<script type="text/javascript">
+
+	$(document).ready(function(){
+		$(".make_query").on("click", function() {
+			$.ajax({
+				url: '/custquery/',
+				type:'GET',
+				data: '',
+				success: function(data) {
+					$("#content_result").html(data);
+				}
+			})
+		});
+	});
+
 		var handleDataTableButtons = function() {
 				"use strict";
 				0 !== $("#datatable-buttons").length && $("#datatable-buttons").DataTable({
