--- a/job/static/job/css/custom.css
+++ b/job/static/job/css/custom.css
@@ -1,3 +1,87 @@
+/* single customer starts */
+ .card {
+    margin-top: 20px;
+    padding: 30px;
+    background-color: rgba(214, 224, 226, 0.2);
+    -webkit-border-top-left-radius:5px;
+    -moz-border-top-left-radius:5px;
+    border-top-left-radius:5px;
+    -webkit-border-top-right-radius:5px;
+    -moz-border-top-right-radius:5px;
+    border-top-right-radius:5px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 1);
+}
+.card.hovercard .card-background {
+    height: 130px;
+}
+.card-background img {
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -o-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
+    margin-left: -100px;
+    margin-top: -200px;
+    min-width: 130%;
+}
+.card.hovercard .useravatar {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .useravatar img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.card.hovercard .card-info {
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .card-info .card-title {
+    padding:0 5px;
+    font-size: 20px;
+    line-height: 1;
+    color: #262626;
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.card.hovercard .card-info {
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 20px;
+    color: #737373;
+    text-overflow: ellipsis;
+}
+.card.hovercard .bottom {
+    padding: 0 20px;
+    margin-bottom: 17px;
+}
+.btn-pref .btn {
+    -webkit-border-radius:0 !important;
+}
+/* single customer ends */
+
 body.nav-sm .container.body .left_col {
   width: 70px;
   padding: 0;
@@ -7,7 +91,12 @@ body.nav-sm .container.body .left_col {
 html, body {
   height:100%;
 }
-.breadcrumb{
+.btn-static, .btn-static:hover {
+    background: #1479b8;
+    color: #fff;
+    cursor: default;
+}
+.breadcrumb {
   margin: 20px 0 !important;
   background: #fff !important;
 }
@@ -308,7 +397,7 @@ body.nav-md .container.body .right_col {
   margin-bottom: 5px
 }
 body {
-  background: #F5F5F5;
+  background: #222222;
   font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
   font-size: 13px;
   font-weight: 400;
@@ -4721,11 +4810,14 @@ a.hiddenanchor {
 /** The wrapper that will contain our two forms **/
 
 #wrapper {
-  right: 0px;
-  margin: 0px auto;
-  margin-top: 5%;
+  bottom: 0;
+  height: 450px;
+  left: 0;
+  margin: auto;
   max-width: 350px;
-  position: relative;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 #register, #login {
   position: absolute;
@@ -4816,7 +4908,7 @@ a:hover {
 }
 .login_content {
   margin: 0 auto;
-  padding: 25px 0 0;
+  padding: 25px 15px 0;
   position: relative;
   text-align: center;
   text-shadow: 0 1px 0 #fff;
