--- a/job/templates/job/admin_job_report.html
+++ b/job/templates/job/admin_job_report.html
@@ -20,10 +20,6 @@
 
 	<div class="col-md-12 col-sm-12 col-xs-12">
 		<div class="x_panel">
-			<!-- <div class="x_title">
-				<h2></h2>
-				<div class="clearfix"></div>
-			</div> -->
 			{% if messages %}
 				<ul class="messages">
 						{% for message in messages %}
@@ -52,10 +48,10 @@
 							<td>{{ job.job_description }}</td>
               <td>{{ job.job_report }}</td>
               <td>
-								<a class="estimation" style="color:black;" id="{{ job.service_id.id }}" data-toggle="modal" data-target="#view_result_data"><button>Estimate</button></a>
+								<a class="estimation" id="{{ job.service_id.id }}" data-toggle="modal" data-target="#view_result_data"><i class="fa fa-calculator" aria-hidden="true" style="color:black;font-size: 15px"></i></a>
 							</td>
 							<td>
-								<a href="{% url 'job:admin_report_submit' job.id %}" style="color:black;"><button name="report">Submit</button></a>
+								<a href="{% url 'job:admin_report_submit' job.id %}"><i class="fa fa-upload" aria-hidden="true" style="color:black;font-size: 15px"></i></a>
 							</td>
 						</tr>
 						{% endif %}
