--- a/job/templates/job/cust_approvel.html
+++ b/job/templates/job/cust_approvel.html
@@ -47,8 +47,8 @@
 							<td>{{ new_job.Estimate_id.visit_charge }}</td>
 							<td>{{ new_job.Estimate_id.total_cost }}</td>
 							<td>
-								<a href="{% url 'job:accept_job' new_job.id %}"><button class="btn btn-primary" value="{{ new_job.id }}">Accept</button></a>
-								<a href="{% url 'job:reject_job' new_job.id %}"><button class="btn btn-primary" value="{{ new_job.id }}">Reject</button></a>
+								<a href="{% url 'job:accept_job' new_job.id %}"><i class="fa fa-check-circle" title="Accept" style="font-size:20px; color:green;" aria-hidden="true"></a>
+								<a href="{% url 'job:reject_job' new_job.id %}"><i class="fa fa-eject" title="Reject" style="font-size:20px; color:red; margin-left:10px;" aria-hidden="true"></i></a>
 							</td>
 						</tr>
 						{% endfor %}
