--- a/job/templates/job/job_all.html
+++ b/job/templates/job/job_all.html
@@ -34,7 +34,6 @@
 							<th>Customer</th>
 							<th>Job Started</th>
 							<th>Job Ended</th>
-							<th>Description</th>
 							<th>Status</th>
 							<th>Worker</th>
 							<th>Cost</th>
@@ -44,10 +43,9 @@
 					<tbody>
 						{% for job in all_jobs %}
 						<tr>
-							<td>{{ job.customer_id }}</td>
+							<td>{{ job.customer_id.first_name }} {{ job.customer_id.last_name }}</td>
 							<td scope="row">{{ job.job_start_datetime }}</td>
 						  <td>{{ job.job_end_datetime }}</td>
-							<td>{{ job.job_description }}</td>
 							<td>{{ job.job_status }}</td>
 							<td>{{ job.worker_id }}</td>
 							<td>{{ job.Estimate_id.total_cost }}</td>
