--- a/job/templates/job/wishes.html
+++ b/job/templates/job/wishes.html
@@ -1,53 +1,153 @@
 {% extends 'job/base.html' %}
 {% block content %}
 	{% if 'Admin' in request.session.dash %}
-	<div class="container">
-		<div class="wrapper border-bottom white-bg page-heading">
-			<div class="col-xs-12">
-				<ol class="breadcrumb" style="padding:20px 15px;">
-					<li>Dashboard</li>
-					<li><strong>Worker Request</strong></li>
-				</ol>
-			</div>
-		</div>
-		<div class="table-responsive" style="overflow-x:inherit;">
-			<div class="container">
-				<div class="col-md-3 pull-right">
-					<form class="navbar-form" role="search" method="post" action="" autocomplete="">
-						{% csrf_token %}
-						<div class="input-group add-on">
-							<input class="form-control" placeholder="Search" name="srch" id="srch" type="text">
-							<div class="input-group-btn">
-								<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-			<table class="table table-bordered">
-			<thead style="background:#2A3F54; color:white;">
-				<tr>
-					<th>Customer Name</th>
-					<th>Email Id</th>
-					<th>Response</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for new_cust in cust %}
-				<tr>
-					<th scope="row">{{ new_cust.first_name }}</th>
-					<td>{{ new_cust.email }}</td>
-					<td>
-						<a href="{% url 'job:add_worker' new_cust.id %}"><button value="{{ new_cust.id }}">Accept</button></a>
-						<a href="{% url 'job:reject_worker' new_cust.id %}"><button value="{{ new_cust.id }}">Reject</button></a>
-					</td>
-				</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	{% else %}
-			<h2>You have no access to this page</h2>
+	{% load static %}
+	<!-- datatable -->
+	<link href="{% static 'job/js/datatables/jquery.dataTables.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/buttons.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/fixedHeader.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/scroller.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<script src="{% static 'job/js/jquery.min.js' %}"></script>
+
+	<div class="wrapper border-bottom white-bg page-heading">
+		<div class="col-xs-12">
+			<ol class="breadcrumb" style="padding:20px 15px;">
+				<li>Dashboard</li>
+				<li><strong>Worker Request</strong></li>
+			</ol>
 		</div>
 	</div>
+
+	<div class="col-md-12 col-sm-12 col-xs-12">
+		<div class="x_panel">
+			{% if messages %}
+				<ul class="messages">
+						{% for message in messages %}
+							<li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+						{% endfor %}
+				</ul>
+			{% endif %}
+			<div class="x_content">
+				<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+					<thead>
+						<tr>
+							<th>Customer Name</th>
+							<th>Email Id</th>
+							<th>Response</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for new_cust in cust %}
+						<tr>
+							<th scope="row">{{ new_cust.first_name }}</th>
+							<td>{{ new_cust.email }}</td>
+							<td>
+								<a href="{% url 'job:add_worker' new_cust.id %}"><i class="fa fa-check-circle" style="font-size:20px; color:green;" aria-hidden="true"></i></a>
+								<a href="{% url 'job:reject_worker' new_cust.id %}"><i class="fa fa-eject" style="font-size:20px; color:red; margin-left:10px;" aria-hidden="true"></i></a>
+							</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<!-- bootstrap progress js -->
+	<script src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
+	<script src="{% static 'job/js/nicescroll/jquery.nicescroll.min.js' %}"></script>
+	<!-- icheck -->
+	<script src="{% static 'job/js/icheck/icheck.min.js' %}"></script>
+
+	<!-- Datatables-->
+	<script src="{% static 'job/js/datatables/jquery.dataTables.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.bootstrap.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.buttons.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/buttons.bootstrap.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/jszip.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/pdfmake.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/vfs_fonts.js' %}"></script>
+	<script src="{% static 'job/js/datatables/buttons.html5.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/buttons.print.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.fixedHeader.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.keyTable.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.responsive.min.js' %}"></script>
+	<script src="{% static 'job/js/datatables/dataTables.scroller.min.js' %}"></script>
+	<script src="{% static 'job/js/pace/pace.min.js' %}"></script>
+
+	<script>
+		$(document).ready(function() {
+
+			window.onload = function () {
+				$( ".x_panel .row .col-sm-12" ).removeClass( "col-sm-12" ).addClass( "table-responsive" );
+			}
+
+			$(".view_data").on("click", function() {
+				query_id = this.id;
+				$.ajax({
+					url: '/'+ query_id +'/responsequery/',
+					type:'GET',
+					data: query_id,
+					success: function(data) {
+						$("#content_result").html(data);
+					}
+				})
+			});
+		});
+		var handleDataTableButtons = function() {
+				"use strict";
+				0 !== $("#datatable-buttons").length && $("#datatable-buttons").DataTable({
+					dom: "Bfrtip",
+					buttons: [{
+						extend: "copy",
+						className: "btn-sm"
+					}, {
+						extend: "csv",
+						className: "btn-sm"
+					}, {
+						extend: "excel",
+						className: "btn-sm"
+					}, {
+						extend: "pdf",
+						className: "btn-sm"
+					}, {
+						extend: "print",
+						className: "btn-sm"
+					}],
+					responsive: !0
+				})
+			},
+			TableManageButtons = function() {
+				"use strict";
+				return {
+					init: function() {
+						handleDataTableButtons()
+					}
+				}
+			}();
+	</script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('#datatable').dataTable();
+			$('#datatable-keytable').DataTable({
+				keys: true
+			});
+			$('#datatable-responsive').DataTable();
+			$('#datatable-scroller').DataTable({
+				ajax: "js/datatables/json/scroller-demo.json",
+				deferRender: true,
+				scrollY: 380,
+				scrollCollapse: true,
+				scroller: true
+			});
+			var table = $('#datatable-fixed-header').DataTable({
+				fixedHeader: true
+			});
+		});
+		TableManageButtons.init();
+	</script>
+
+	{% else %}
+			<h2>You have no access to this page</h2>
 	{% endif %}
 {% endblock %}
