--- a/job/templates/job/profile.html
+++ b/job/templates/job/profile.html
@@ -3,135 +3,157 @@
 	<div class="">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
-				<div class="x_panel">
-					<div class="x_title">
-						<h2>User Profile</h2>
-						<div class="clearfix"></div>
-					</div>
-					<div class="x_content">
-
-						<div class="col-md-3 col-sm-3 col-xs-12 profile_left">
-							<div class="profile_img">
-									<!-- Current avatar -->
-									<div class="avatar-view" title="Change the avatar">
-										<img src="{{ request.session.profile }}" alt="Avatar">
-									</div>
-								</div>
-								<!-- end of image cropping -->
-							<h3>{{ user.first_name }}  {{ user.last_name }}</h3>
-
-							<ul class="list-unstyled user_data">
-								<li>
-									<i class="fa fa-map-marker user-profile-icon"></i> {{ user.address }}
-								</li>
-								<li class="m-top-xs">
-									<i class="fa fa-external-link user-profile-icon"></i>{{ user.email }}
-								</li>
-							</ul>
-
-							<a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>
-							<br />
-
-						</div>
-
-						<!-- profile rightbar tabs starts -->
-						<div class="col-md-9 col-sm-9 col-xs-12">
-							<div class="" role="tabpanel" data-example-id="togglable-tabs">
-								<ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-									<li role="presentation" class="active"><a href="#tab_content1" id="home-tab" role="tab" data-toggle="tab" aria-expanded="true">Recent Activity</a>
-									</li>
-									<li role="presentation" class=""><a href="#tab_content2" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Projects Worked on</a>
-									</li>
-								</ul>
-								<div id="myTabContent" class="tab-content">
-									<div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
-
-										<!-- start recent activity -->
-										<ul class="messages">
-											<li>
-												<img src="images/img.jpg" class="avatar" alt="Avatar">
-												<div class="message_date">
-													<h3 class="date text-info">24</h3>
-													<p class="month">May</p>
-												</div>
-												<div class="message_wrapper">
-													<h4 class="heading">Desmond Davison</h4>
-													<blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-													<br />
-													<p class="url">
-														<span class="fs1 text-info" aria-hidden="true" data-icon=""></span>
-														<a href="#"><i class="fa fa-paperclip"></i> User Acceptance Test.doc </a>
-													</p>
-												</div>
-											</li>
-											<li>
-												<img src="images/img.jpg" class="avatar" alt="Avatar">
-												<div class="message_date">
-													<h3 class="date text-error">21</h3>
-													<p class="month">May</p>
-												</div>
-												<div class="message_wrapper">
-													<h4 class="heading">Brian Michaels</h4>
-													<blockquote class="message">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth.</blockquote>
-													<br />
-													<p class="url">
-														<span class="fs1" aria-hidden="true" data-icon=""></span>
-														<a href="#" data-original-title="">Download</a>
-													</p>
-												</div>
-											</li>
-										</ul>
-										<!-- end recent activity -->
-
-									</div>
-									<div role="tabpanel" class="tab-pane fade" id="tab_content2" aria-labelledby="profile-tab">
-
-										<!-- start user projects -->
-										<table class="data table table-striped no-margin">
-											<thead>
-												<tr>
-													<th>#</th>
-													<th>Project Name</th>
-													<th>Client Company</th>
-													<th class="hidden-phone">Hours Spent</th>
-													<th>Contribution</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>New Company Takeover Review</td>
-													<td>Deveint Inc</td>
-													<td class="hidden-phone">18</td>
-													<td class="vertical-align-mid">
-														<div class="progress">
-															<div class="progress-bar progress-bar-success" data-transitiongoal="35"></div>
-														</div>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>New Partner Contracts Consultanci</td>
-													<td>Deveint Inc</td>
-													<td class="hidden-phone">13</td>
-													<td class="vertical-align-mid">
-														<div class="progress">
-															<div class="progress-bar progress-bar-danger" data-transitiongoal="15"></div>
-														</div>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!-- end user projects -->
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- profile rightbar tabs ends -->
-
+				<div class="wrapper border-bottom white-bg page-heading">
+					<div class="col-xs-12">
+						<ol class="breadcrumb" style="padding:20px 15px;">
+							<li>Dashboard</li>
+							<li><strong>Profile</strong></li>
+						</ol>
 					</div>
 				</div>
-			</div>
+
+				<div class="card hovercard">
+						<div class="card-background">
+								<img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
+						</div>
+						<div class="useravatar">
+								<img alt="" src="{{ customer.profile_pic.url }}">
+						</div>
+						<div class="card-info"> <span class="card-title">{{ customer.first_name }} {{ customer.last_name }}</span>
+
+						</div>
+				</div>
+				<div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+						<div class="btn-group" role="group">
+								<button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+										<div class="hidden-xs">Profile</div>
+								</button>
+						</div>
+						<div class="btn-group" role="group">
+								<button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+										<div class="hidden-xs">Jobs {{ all_jobs.count }}</div>
+								</button>
+						</div>
+						<div class="btn-group" role="group">
+								<button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+										<div class="hidden-xs">Query {{ all_queries.count }}</div>
+								</button>
+						</div>
+				</div>
+
+				<div class="well">
+					<div class="tab-content">
+						<div class="tab-pane fade in active" id="tab1">
+							<div class="table-responsive">
+								<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+									<tbody>
+										<tr>
+												<th>Name</th>
+												<td scope="row">{{ customer.first_name }} {{ customer.last_name }}</td>
+										</tr>
+										<tr>
+												<th>Address</th>
+												<td>{{ customer.address }}</td>
+										</tr>
+										<tr>
+												<th>Contact Number</th>
+												<td>{{ customer.mobile_number }}</td>
+										</tr>
+										<tr>
+												<th>Email</th>
+												<td>{{ customer.email }}</td>
+										</tr>
+										<tr>
+												<th>Registration Date</th>
+												<td>{{ customer.Reg_date }}</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div class="tab-pane fade in" id="tab2">
+							<div class="table-responsive">
+								<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+									<thead>
+										<tr>
+											<th>Job Started</th>
+											<th>Job Ended</th>
+											<th>Location</th>
+											<th>Description</th>
+											<th>Status</th>
+											<th>Worker</th>
+											<th>Cost</th>
+										</tr>
+									</thead>
+									<tbody style="text-align:center;">
+										{% if all_jobs %}
+											{% for job in all_jobs %}
+											<tr>
+												<td scope="row">{{ job.job_start_datetime }}</td>
+												<td>{{ job.job_end_datetime }}</td>
+												<td>{{ job.location }}</td>
+												<td>{{ job.job_description }}</td>
+												<td>{{ job.job_status }}</td>
+												<td>{{ job.worker_id }}</td>
+												<td>{{ job.Estimate_id.total_cost }}</td>
+											</tr>
+											{% endfor %}
+										{% else %}
+										<tr>
+											<td colspan="2">
+												No Record Found.
+											</td>
+										</tr>
+										{% endif %}
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div class="tab-pane fade in" id="tab3">
+							<div class="table-responsive">
+								<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+									<thead>
+										<tr>
+											<th>Query Date</th>
+											<th>Query Description</th>
+											<th>Status</th>
+										</tr>
+									</thead>
+									<tbody style="text-align:center;">
+										{% if all_queries %}
+											{% for q in all_queries %}
+											<tr>
+												<td>{{ q.query_dateTime }}</td>
+												<td>{{ q.query_description }}</td>
+												{% if 'completed' in q.status %}
+													<td style="color:green">{{q.status}}</td>
+												{% else %}
+													<td style="color:red">{{q.status}}</td>
+												{% endif %}
+											</tr>
+											{% endfor %}
+										{% else %}
+										<tr>
+											<td colspan="2" style="text-align:center;">
+												No Record Found.
+											</td>
+										</tr>
+										{% endif %}
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<script type="text/javascript">
+					$(".btn-pref .btn").click(function () {
+							$(".btn-pref .btn").removeClass("btn-primary").addClass("btn-default");
+							// $(".tab").addClass("active"); // instead of this do the below
+							$(this).removeClass("btn-default").addClass("btn-primary");
+					});
+				</script>
+
 		</div>
 	</div>
 {% endblock %}
