--- a/job/templates/job/report_job.html
+++ b/job/templates/job/report_job.html
@@ -9,7 +9,7 @@
     <button type="submit" id="report_job" class="btn btn-primary">submit</button>
   </div>
 </form>
-<div id="result">Data Stored Successfully.</div>
+<div id="result"></div>
 
     <script type="text/javascript">
     		$('#result').hide();
@@ -32,6 +32,7 @@
     				success: function() {
     					$('#report_job_form').hide();
     					$('#result').show("slow");
+              $('#result').html(data);
     				}
     			})
     			console.log("working");
