--- a/job/templates/job/create_job.html
+++ b/job/templates/job/create_job.html
@@ -19,7 +19,9 @@
 						<select name="worker_id" id="worker_id" style="width:200px">
 							<option  selected="selected" disabled="">Select Worker:</option>
 							{% for value in all_workers %}
+								{% if not value.worker.wish_to_be_worker %}
 								<option value="{{value.id}}">{{value}}</option>
+								{% endif %}
 							{% endfor %}
 						</select>
 			    </div>
